[tool.poetry]
name = "gdi"
version = "0.1.0"
description = "gdi cli for gdi python sdk"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4"
click = { git = "https://github.com/pallets/click.git" }
requests = { git = "https://github.com/psf/requests.git" }
geopandas = { git = "https://github.com/geopandas/geopandas.git" }
minio = { git = "https://github.com/minio/minio-py.git" }
geopy = { git = "https://github.com/geopy/geopy.git" }
rasterio = "1.4.3"
numpy = "2.2.3"
pystac-client = "0.8.6"
networkx = { git = "https://github.com/networkx/networkx.git" }
scipy = "1.15.2"
gdal = {file="asset_files/GDAL-3.8.4-cp312-cp312-win_amd64.whl"}
tqdm = {git = "https://github.com/tqdm/tqdm.git"}
rioxarray = {git = "https://github.com/corteva/rioxarray.git"}
scikit-image = '0.25.2'

[tool.poetry.scripts]
gdi = "gdi:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
