[tool.poetry]
name = "gdi"
version = "0.1.0"
description = "gdi cli for gdi python sdk"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
click = { git = "https://github.com/pallets/click.git" }
requests = { git = "https://github.com/psf/requests.git" }
geopandas = { git = "https://github.com/geopandas/geopandas.git" }
minio = { git = "https://github.com/minio/minio-py.git" }
geopy = { git = "https://github.com/geopy/geopy.git" }
rasterio = "1.4.3"
numpy = "1.26.4"
pystac-client = "0.8.6"
networkx = { git = "https://github.com/networkx/networkx.git" }
scipy = "1.15.2"
tqdm = '4.67.0'
rioxarray = {git = "https://github.com/corteva/rioxarray.git"}
scikit-image = '0.25.2'

numba = "0.61.2"

[tool.poetry.scripts]
gdi = "gdi:cli"

[[tool.poetry.packages]]
include = "gdi_cli.py"

[[tool.poetry.packages]]
include = "gdi.py"

[[tool.poetry.packages]]
include = "auth"

[[tool.poetry.packages]]
include = "common"

[[tool.poetry.packages]]
include = "features"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
